fixed the big ass gap between the check and header in thank you page

--- a/static/styles/applicant_applied.css
+++ b/static/styles/applicant_applied.css
@@ -40,7 +40,7 @@ body {
 .confirmation-icon {
     font-size: 5rem;
     color: #22c55e;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
     animation: confirmationIconPulse 1s ease-out;
     width: 80px;
     height: 80px;
